Settings: Add Pocket judge
Change-Id: I580050c6b282b072c232feec1a13b27ad45b302f

--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -349,4 +349,9 @@
     <string name="status_bar_battery_percentage_default">Hidden (default)</string>
     <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
     <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
+	
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
+	
 </resources>
