--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -105,6 +105,12 @@
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_sleep_lockscreen_title"
             android:defaultValue="true" />
+			
+        <com.android.settings.arrow.preferences.SystemSettingSwitchPreference
+			android:key="pocket_judge"
+			android:title="@string/pocket_judge_title"
+			android:summary="@string/pocket_judge_summary"
+			android:defaultValue="false" />
 
         <Preference
             android:key="double_tap_power_flashlight_summary"
